--- a/mysite/scraper/templates/scraper/header.html
+++ b/mysite/scraper/templates/scraper/header.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bug Tracker</title>
+    {% load static %}
+    <link href='{% static "css/style.css" %}' type="text/css" rel="stylesheet">
+
+    <title>News Scraping Site</title>
 </head>
 
 <body>
