--- a/mysite/scraper/templates/scraper/home.html
+++ b/mysite/scraper/templates/scraper/home.html
@@ -42,6 +42,34 @@
     {% endif %}
 {% endfor %}
 </div>
+<div>
+    <h2>New York Times</h2>
+{% for new in news %}
+    {% if new.site == "NewYorkTimes" %}
+<div>
+    <a href="{{new.url}}">{{new.title}}</a>
+<!--    <img src="{{new.img}}" alt="">-->
+<!--    {{new.date}}-->
+<!--    <span style="white-space: pre-line">{{new.body}}</span>-->
+
+</div>
+    {% endif %}
+{% endfor %}
+</div>
+<div>
+    <h2>Associated Press</h2>
+{% for new in news %}
+    {% if new.site == "AssociatedPress" %}
+<div>
+    <a href="{{new.url}}">{{new.title}}</a>
+<!--    <img src="{{new.img}}" alt="">-->
+<!--    {{new.date}}-->
+<!--    <span style="white-space: pre-line">{{new.body}}</span>-->
+
+</div>
+    {% endif %}
+{% endfor %}
+</div>
     
 
 
