--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -6,4 +6,47 @@
 
 img {
     width: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1600px;
+    margin: auto;
+    gap: 24px;
+}
+
+.new-data-container {
+    position: relative;
+    display: inline-block;
+}
+
+.new-data-container .new-data {
+    visibility: hidden;
+    width: 400px;
+    background: rgba(0,0,0,0.8);
+    color: #fff;
+    border-radius: 6px;
+    padding: 5px 0;
+    padding: 16px;
+    padding-bottom: 16px;
+
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 8;
+            line-clamp: 2; 
+    -webkit-box-orient: vertical;
+}
+
+.new-data-container:hover .new-data {
+    visibility: visible;
+    
+  }
