--- a/mysite/scraper/templates/scraper/home.html
+++ b/mysite/scraper/templates/scraper/home.html
@@ -1,11 +1,16 @@
 {% include "scraper/header.html" %}
-<div class="container">
+<div class="container-n">
 
     <div class="news-container">
-        <h2>Idaho State Journal</h2>
+        <div class="link">
+            <a href="{% url 'news_site' 'Idaho State Journal' %}"><h2 class="mid">Idaho State Journal</h2></a>
+        </div>
         {% for new in isj %}
             <div class="new-data-container">
-                <a href="{{new.url}}">{{new.title}}</a>
+                <div class="link">
+                    <a href="{{new.url}}">{{new.title}}</a>
+                    
+                </div>
                 <div class="new-data">
                     <img src="{{new.img}}" alt="">
                     <span>{{new.date}}</span><br>
@@ -16,10 +21,16 @@
     </div>
 
     <div class="news-container">
-        <h2>East Idaho News</h2>
+        <div class="link">
+            <a href="{% url 'news_site' 'East Idaho News' %}"><h2 class="mid">East Idaho News</h2></a>
+
+        </div>
         {% for new in ein %}
             <div class="new-data-container">
-                <a href="{{new.url}}">{{new.title}}</a>
+                <div class="link">
+                    <a href="{{new.url}}">{{new.title}}</a>
+
+                </div>
                 <div class="new-data">
                     <img src="{{new.img}}" alt="">
                     <span>{{new.date}}</span><br>
@@ -30,10 +41,15 @@
     </div>
 
     <div class="news-container">
-        <h2>Yahoo News</h2>
+        <div class="link">
+            <a href="{% url 'news_site' 'Yahoo News' %}"><h2 class="mid">Yahoo News</h2></a>
+                    
+        </div>
         {% for new in yh %}
             <div class="new-data-container">
-                <a href="{{new.url}}">{{new.title}}</a>
+                <div class="link">
+                    <a href="{{new.url}}">{{new.title}}</a>
+                </div>
                 <div class="new-data">
                     <img src="{{new.img}}" alt="">
                     <span>{{new.date}}</span><br>
@@ -44,10 +60,14 @@
     </div>
 
     <div class="news-container">
-        <h2>New York Times</h2>
+        <div class="link">
+            <a href="{% url 'news_site' 'New York Times' %}"><h2 class="mid">New York Times</h2></a>
+                </div>
         {% for new in nyt %}
             <div class="new-data-container">
-                <a href="{{new.url}}">{{new.title}}</a>
+                <div class="link">
+                    <a href="{{new.url}}">{{new.title}}</a>
+                </div>
                 <div class="new-data">
                     <img src="{{new.img}}" alt="">
                     <span>{{new.date}}</span><br>
@@ -58,10 +78,14 @@
     </div>
 
     <div class="news-container">
-        <h2>Associated Press</h2>
+        <div class="link">
+            <a href="{% url 'news_site' 'Associated Press' %}"><h2 class="mid">Associated Press</h2></a>
+                </div>
         {% for new in ap %}
             <div class="new-data-container">
-                <a href="{{new.url}}">{{new.title}}</a>
+                <div class="link">
+                    <a href="{{new.url}}">{{new.title}}</a>
+                </div>
                 <div class="new-data">
                     <img src="{{new.img}}" alt="">
                     <span>{{new.date}}</span><br>
@@ -72,10 +96,14 @@
     </div>
 
     <div class="news-container">
-        <h2>CNN</h2>
+        <div class="link">
+            <a href="{% url 'news_site' 'CNN' %}"><h2 class="mid">CNN</h2></a>
+                </div>
         {% for new in cnn %}
             <div class="new-data-container">
-                <a href="{{new.url}}">{{new.title}}</a>
+                <div class="link">
+                    <a href="{{new.url}}">{{new.title}}</a>
+                </div>
                 <div class="new-data">
                     <img src="{{new.img}}" alt="">
                     <span>{{new.date}}</span><br>
@@ -86,10 +114,14 @@
     </div>
 
     <div class="news-container">
-        <h2>Sky News</h2>
+        <div class="link">
+            <a href="{% url 'news_site' 'Sky News' %}"><h2 class="mid">Sky News</h2></a>
+                </div>
         {% for new in sky %}
             <div class="new-data-container">
-                <a href="{{new.url}}">{{new.title}}</a>
+                <div class="link">
+                    <a href="{{new.url}}">{{new.title}}</a>
+                </div>
                 <div class="new-data">
                     <img src="{{new.img}}" alt="">
                     <span>{{new.date}}</span><br>
@@ -100,10 +132,14 @@
     </div>
 
     <div class="news-container">
-        <h2>Washington Post</h2>
+        <div class="link">
+            <a href="{% url 'news_site' 'Washington Post' %}"><h2 class="mid">Washington Post</h2></a>
+                </div>
         {% for new in wp %}
             <div class="new-data-container">
-                <a href="{{new.url}}">{{new.title}}</a>
+                <div class="link">
+                    <a href="{{new.url}}">{{new.title}}</a>
+                </div>
                 <div class="new-data">
                     <img src="{{new.img}}" alt="">
                     <span>{{new.date}}</span><br>
